updated the profile and dashboard templates

--- a/playora/playora_app/templates/dashboard.html
+++ b/playora/playora_app/templates/dashboard.html
@@ -28,7 +28,7 @@
     <script src="https://unpkg.com/@popperjs/core@2"></script>
     <!-- Main Styling -->
     <link
-      href="{% static 'css/soft-ui-dashboard-tailwind.css?v=1.0.5' %}"
+      href="{% static 'css/soft-ui-dashboard-tailwind.css' %}"
       rel="stylesheet" />
 
     <script
@@ -2204,6 +2204,6 @@
   <script async defer src="https://buttons.github.io/buttons.js"></script>
   <!-- main script file  -->
   <script
-    src="{% static 'js/soft-ui-dashboard-tailwind.js?v=1.0.5' %}"
+    src="{% static 'js/soft-ui-dashboard-tailwind.js' %}"
     async></script>
 </html>
