bulk changes to dynamic templates

--- a/playora/playora_app/templates/sidebar.html
+++ b/playora/playora_app/templates/sidebar.html
@@ -414,8 +414,8 @@ class="max-w-62.5 ease-nav-brand z-990 fixed inset-y-0 my-4 ml-4 block w-full -t
     sidenav-card>
     <div
       class="mb-7.5 absolute h-full w-full rounded-2xl bg-cover bg-center"
-      style="
-        background-image: url("{% static 'img/curved-images/white-curved.jpeg' %}");
+      style=" 
+        background-image: url("../img/curved-images/white-curved.jpeg");
       "></div>
     <div class="relative z-20 flex-auto w-full p-4 text-left text-white">
       <div
