--- a/playora/playora_app/templates/dashboard.html
+++ b/playora/playora_app/templates/dashboard.html
@@ -440,7 +440,7 @@
               class="border-black/12.5 shadow-soft-xl relative flex h-full min-w-0 flex-col break-words rounded-2xl border-0 border-solid bg-white bg-clip-border p-4">
               <div
                 class="relative h-full overflow-hidden bg-cover rounded-xl"
-                style="background-image: url('../assets/img/ivancik.jpg')">
+                style="background-image: url('../img/ivancik.jpg')">
                 <span
                   class="absolute top-0 left-0 w-full h-full bg-center bg-cover bg-gradient-to-tl from-gray-900 to-slate-800 opacity-80"></span>
                 <div class="relative z-10 flex flex-col flex-auto h-full p-4">
